Fix CBUIDropdown z-index

--- a/classes/CBUIDropdown/CBUIDropdown.css
+++ b/classes/CBUIDropdown/CBUIDropdown.css
@@ -23,7 +23,7 @@
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 999;
+    z-index: 1000;
 }
 
 .CBUIDropdownShield.raised {
